# mars6-turbo

./: .gitignore  MANIFEST.in  MARS6_turbo_inference_demo.ipynb  README.md  example.py  hubconf.py  index.html  inference.py  pyproject.toml  samples.json  test.py
audio/mars6-snac-eng-50k-2M-ft4-2000100-deep/: p005_rainbow_07_regular.flac  p006_rainbow_06_fast.flac  p008_rainbow_01_highpitch.flac  p009_rainbow_06_loud.flac  p013_rainbow_04_lowpitch.flac  p018_rainbow_06_whisper.flac  p022_emo_extasy_sentences.flac  p026_emo_cuteness_sentences.flac  p029_emo_interest_sentences.flac  p031_emo_realization_sentences.flac  p032_emo_fear_sentences.flac  p037_emo_pain_sentences.flac  p043_emo_sadness_sentences.flac  p056_emo_adoration_sentences.flac  p068_emo_sadness_sentences.flac  p071_emo_disgust_sentences.flac  p082_emo_sadness_sentences.flac  p094_emo_extasy_sentences.flac  p103_emo_relief_sentences.flac  p106_emo_amusement_sentences.flac
audio/mars6-snac-eng-50k-2M-ft4-2000100-shallow/: p005_rainbow_07_regular.flac  p006_rainbow_06_fast.flac  p008_rainbow_01_highpitch.flac  p009_rainbow_06_loud.flac  p013_rainbow_04_lowpitch.flac  p018_rainbow_06_whisper.flac  p022_emo_extasy_sentences.flac  p026_emo_cuteness_sentences.flac  p029_emo_interest_sentences.flac  p031_emo_realization_sentences.flac  p032_emo_fear_sentences.flac  p037_emo_pain_sentences.flac  p043_emo_sadness_sentences.flac  (+7 more)
css/: custom.css  normalize.css
js/: main.js
mars6/: ar_model.py  hubconf.py  inference.py  main.py  nn_future.py  utils.py
mars6_turbo/: ar_model.py  utils.py
(+81 files in other folders)
